# elos-google-search-mcp

./: .gitignore  Containerfile  Makefile  README.md  pyproject.toml
elos_google_search_mcp/: __init__.py  server.py
kubernetes/: elos-google-search-deployment.yaml  elos-google-search-secret.yaml  kustomization.yaml
llama-stack-integration/: README.md  run-with-google-search.yaml
