[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elos-google-search-mcp"
version = "0.1.0"
description = "Google Search MCP Server for Elos"
authors = [{name = "Elos Tech", email = "info@elostech.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["elos_google_search_mcp*"]

[tool.black]
line-length = 88
target-version = ['py39']

